--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #F6EEE0;
+    background-color: #C38370;
 }
 .cat-image{
     background-color: #f6eee0;
